tests/snapshots/replace_mode_test__r_on_empty_line.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
hello
[ ]
world
