tests/snapshots/replace_mode_test__r_with_register.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:9
Lines: 1

Buffer:
hyiwrX"ap[e]llo world
