tests/snapshots/replace_mode_test__visual_replace.snap
---
source: tests/replace_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:4
Lines: 1

Buffer:
hell[o] world
